# ai_life_os

./: .env.example  .gitignore  =3.0.0  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  WECOM_IMPLEMENTATION_SUMMARY.md  WECOM_QUICK_START_GUIDE.md  fix_encoding.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  start.ps1  start_service.ps1  start_wecom_ws.js  start_wecom_ws.py  test_wecom_integration.py  一键启动.bat
.arts/: settings.json
cli/: anchor_cmd.py
config/: blueprint.yaml  file_sensor.yaml  model.example.yaml  phase_rules.yaml  system.yaml  wecom.yaml
core/: audit_logger.py  blueprint.py  blueprint_anchor.py  bootstrap.py  config_cache.py  config_manager.py  conversation_summarizer.py  event_analyzer.py  event_archiver.py  event_log_cache.py  event_sourcing.py  evolution_engine.py  evolution_monitor.py  exceptions.py  failure_strategy.py  feedback_classifier.py  file_sensor.py  file_sensor_config.py  file_watcher.py  goal_decomposer.py  goal_engine.py  goal_generator.py  goal_inference.py  goal_service.py  intent_recognition.py  interaction_handler.py  intervention_tracker.py  llm_adapter.py  logger.py  memory_indexer.py  memory_store.py  models.py  mood_detector.py  paths.py  performance_monitor.py  persona_loader.py  retrospective.py  rhythm_detector.py  rule_evaluator.py  sandbox.py  (+12 more)
deploy/: vps_setup.sh
docs/: CHANGELOG_v3.md  api-documentation.md  core_design.md  mid-term-tasks-plan.md  namesilo_setup.md  phase7-completion-summary.md  project-status-summary.md  resume-conversation-prompt.md  roadmap_2026.md  (+6 more)
(+193 files in other folders)
