[project]
name = "ai-life-os"
version = "1.3.0"
description = "AI-driven personal life operating system"
authors = [
    { name = "AI Life OS Contributors" }
]
requires-python = ">=3.8"

[tool.ruff]
# Select rules from generic (E, W) and flak8 (F)
select = ["E", "W", "F"]
ignore = []

# Exclude varied directories
exclude = [
    ".venv",
    "__pycache__",
    "config",
]

line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
